set(SRC_FILES
    src/AbsorptionCorrection.cpp
    src/AddAbsorptionWeightedPathLengths.cpp
    src/AddLogDerivative.cpp
    src/AddPeak.cpp
    src/AddSampleLog.cpp
    src/AddTimeSeriesLog.cpp
    src/AnnularRingAbsorption.cpp
    src/AnyShapeAbsorption.cpp
    src/ApodizationFunctions.cpp
    src/AppendSpectra.cpp
    src/ApplyCalibration.cpp
    src/ApplyDetailedBalance.cpp
    src/ApplyFloodWorkspace.cpp
    src/ApplyInstrumentToPeaks.cpp
    src/ApplyTransmissionCorrection.cpp
    src/AverageLogData.cpp
    src/BeamProfileFactory.cpp
    src/Bin2DPowderDiffraction.cpp
    src/BinaryOperateMasks.cpp
    src/BinaryOperation.cpp
    src/CalculateCarpenterSampleCorrection.cpp
    src/CalculateCountRate.cpp
    src/CalculateDIFC.cpp
    src/CalculateDynamicRange.cpp
    src/CalculateEfficiency.cpp
    src/CalculateEfficiency2.cpp
    src/CalculateFlatBackground.cpp
    src/CalculateIqt.cpp
    src/CalculatePlaczek.cpp
    src/CalculatePlaczekSelfScattering.cpp
    src/CalculatePlaczekSelfScattering2.cpp
    src/CalculatePolynomialBackground.cpp
    src/CalculateTransmission.cpp
    src/CalculateTransmissionBeamSpreader.cpp
    src/CalculateZscore.cpp
    src/CarpenterSampleCorrection.cpp
    src/ChangeBinOffset.cpp
    src/ChangeLogTime.cpp
    src/ChangePulsetime.cpp
    src/ChangePulsetime2.cpp
    src/ChangeTimeZero.cpp
    src/ChopData.cpp
    src/ClearCache.cpp
    src/ClearInstrumentParameters.cpp
    src/ClearMaskFlag.cpp
    src/CloneWorkspace.cpp
    src/CombineDiffCal.cpp
    src/Comment.cpp
    src/CommutativeBinaryOperation.cpp
    src/CompareWorkspaces.cpp
    src/ConjoinWorkspaces.cpp
    src/ConjoinXRuns.cpp
    src/ConvertAxesToRealSpace.cpp
    src/ConvertAxisByFormula.cpp
    src/ConvertDiffCal.cpp
    src/ConvertFromDistribution.cpp
    src/ConvertSpectrumAxis.cpp
    src/ConvertSpectrumAxis2.cpp
    src/ConvertTableToMatrixWorkspace.cpp
    src/ConvertToConstantL2.cpp
    src/ConvertToDistribution.cpp
    src/ConvertToEventWorkspace.cpp
    src/ConvertToHistogram.cpp
    src/ConvertToMatrixWorkspace.cpp
    src/ConvertToPointData.cpp
    src/ConvertUnits.cpp
    src/ConvertUnitsUsingDetectorTable.cpp
    src/CopyDataRange.cpp
    src/CopyDetectorMapping.cpp
    src/CopyInstrumentParameters.cpp
    src/CopyLogs.cpp
    src/CopySample.cpp
    src/CorelliCalibrationApply.cpp
    src/CorelliCalibrationDatabase.cpp
    src/CorelliCrossCorrelate.cpp
    src/CorrectKiKf.cpp
    src/CorrectTOFAxis.cpp
    src/CorrectToFile.cpp
    src/CreateCalFileByNames.cpp
    src/CreateDetectorTable.cpp
    src/CreateDummyCalFile.cpp
    src/CreateEPP.cpp
    src/CreateFlatEventWorkspace.cpp
    src/CreateFloodWorkspace.cpp
    src/CreateGroupingWorkspace.cpp
    src/CreateLogPropertyTable.cpp
    src/CreateLogTimeCorrection.cpp
    src/CreateMonteCarloWorkspace.cpp
    src/CreatePSDBleedMask.cpp
    src/CreatePeaksWorkspace.cpp
    src/CreateSampleWorkspace.cpp
    src/CreateSingleValuedWorkspace.cpp
    src/CreateUserDefinedBackground.cpp
    src/CreateWorkspace.cpp
    src/CropToComponent.cpp
    src/CropWorkspace.cpp
    src/CropWorkspaceRagged.cpp
    src/CrossCorrelate.cpp
    src/CuboidGaugeVolumeAbsorption.cpp
    src/CylinderAbsorption.cpp
    src/DeadTimeCorrection.cpp
    src/DeleteLog.cpp
    src/DeleteWorkspace.cpp
    src/DeleteWorkspaces.cpp
    src/DetectorDiagnostic.cpp
    src/DetectorEfficiencyCor.cpp
    src/DetectorEfficiencyCorUser.cpp
    src/DetectorEfficiencyVariation.cpp
    src/DiffractionEventCalibrateDetectors.cpp
    src/DiffractionFocussing.cpp
    src/DiffractionFocussing2.cpp
    src/DirectILLTubeBackground.cpp
    src/DiscusMultipleScatteringCorrection.cpp
    src/Divide.cpp
    src/EQSANSCorrectFrame.cpp
    src/EQSANSResolution.cpp
    src/EQSANSTofStructure.cpp
    src/EditInstrumentGeometry.cpp
    src/ElasticWindow.cpp
    src/EstimateDivergence.cpp
    src/EstimateResolutionDiffraction.cpp
    src/EventWorkspaceAccess.cpp
    src/Exponential.cpp
    src/ExponentialCorrection.cpp
    src/ExportTimeSeriesLog.cpp
    src/ExtractFFTSpectrum.cpp
    src/ExtractMask.cpp
    src/ExtractMaskToTable.cpp
    src/ExtractSingleSpectrum.cpp
    src/ExtractSpectra.cpp
    src/ExtractSpectra2.cpp
    src/ExtractUnmaskedSpectra.cpp
    src/FFT.cpp
    src/FFTDerivative.cpp
    src/FFTSmooth.cpp
    src/FFTSmooth2.cpp
    src/FilterBadPulses.cpp
    src/FilterByLogValue.cpp
    src/FilterByTime.cpp
    src/FilterByXValue.cpp
    src/FilterEvents.cpp
    src/FindCenterOfMassPosition.cpp
    src/FindCenterOfMassPosition2.cpp
    src/FindDeadDetectors.cpp
    src/FindDetectorsOutsideLimits.cpp
    src/FindEPP.cpp
    src/FindPeakBackground.cpp
    src/FindPeaks.cpp
    src/FindPeaksConvolve.cpp
    src/FitPeak.cpp
    src/FitPeaks.cpp
    src/FixGSASInstrumentFile.cpp
    src/FlatPlateAbsorption.cpp
    src/GeneralisedSecondDifference.cpp
    src/GenerateEventsFilter.cpp
    src/GenerateGoniometerIndependentBackground.cpp
    src/GenerateIPythonNotebook.cpp
    src/GeneratePeaks.cpp
    src/GeneratePythonFitScript.cpp
    src/GeneratePythonScript.cpp
    src/GetAllEi.cpp
    src/GetDetectorOffsets.cpp
    src/GetEi.cpp
    src/GetEi2.cpp
    src/GetEiMonDet3.cpp
    src/GetQsInQENSData.cpp
    src/GetTimeSeriesLogInformation.cpp
    src/GravitySANSHelper.cpp
    src/GroupToXResolution.cpp
    src/GroupWorkspaces.cpp
    src/HRPDSlabCanAbsorption.cpp
    src/He3TubeEfficiency.cpp
    src/HyspecScharpfCorrection.cpp
    src/IQTransform.cpp
    src/IdentifyNoisyDetectors.cpp
    src/IntegrateByComponent.cpp
    src/IntegrateEPP.cpp
    src/Integration.cpp
    src/InterpolatingRebin.cpp
    src/InterpolationOption.cpp
    src/InvertMask.cpp
    src/LineProfile.cpp
    src/Logarithm.cpp
    src/LorentzCorrection.cpp
    src/MagFormFactorCorrection.cpp
    src/MaskBins.cpp
    src/MaskBinsFromTable.cpp
    src/MaskBinsFromWorkspace.cpp
    src/MaskBinsIf.cpp
    src/MaskDetectorsIf.cpp
    src/MaskInstrument.cpp
    src/MaskNonOverlappingBins.cpp
    src/MatrixWorkspaceAccess.cpp
    src/Max.cpp
    src/MaxEnt.cpp
    src/MaxEnt/MaxentCalculator.cpp
    src/MaxEnt/MaxentEntropyNegativeValues.cpp
    src/MaxEnt/MaxentEntropyPositiveValues.cpp
    src/MaxEnt/MaxentSpaceComplex.cpp
    src/MaxEnt/MaxentSpaceReal.cpp
    src/MaxEnt/MaxentTransformFourier.cpp
    src/MaxEnt/MaxentTransformMultiFourier.cpp
    src/MaxMin.cpp
    src/MedianDetectorTest.cpp
    src/MergeLogs.cpp
    src/MergeRuns.cpp
    src/Min.cpp
    src/Minus.cpp
    src/ModeratorTzero.cpp
    src/ModeratorTzeroLinear.cpp
    src/MonitorEfficiencyCorUser.cpp
    src/MonteCarloAbsorption.cpp
    src/MostLikelyMean.cpp
    src/MultipleScatteringCorrection.cpp
    src/MultipleScatteringCorrectionDistGraber.cpp
    src/Multiply.cpp
    src/MultiplyRange.cpp
    src/NormaliseByCurrent.cpp
    src/NormaliseByDetector.cpp
    src/NormaliseToMonitor.cpp
    src/NormaliseToUnity.cpp
    src/OneMinusExponentialCor.cpp
    src/PDCalibration.cpp
    src/PDDetermineCharacterizations.cpp
    src/PDFFourierTransform.cpp
    src/PDFFourierTransform2.cpp
    src/PaalmanPingsAbsorptionCorrection.cpp
    src/PaddingAndApodization.cpp
    src/ParallaxCorrection.cpp
    src/Pause.cpp
    src/PeakParameterHelper.cpp
    src/PerformIndexOperations.cpp
    src/Plus.cpp
    src/PointByPointVCorrection.cpp
    src/PoissonErrors.cpp
    src/PolarizationCorrectionFredrikze.cpp
    src/PolarizationCorrectionWildes.cpp
    src/PolarizationCorrections/DepolarizedAnalyserTransmission.cpp
    src/PolarizationCorrections/FlipperEfficiency.cpp
    src/PolarizationCorrections/HeliumAnalyserEfficiency.cpp
    src/PolarizationCorrections/PolarizationCorrectionsHelpers.cpp
    src/PolarizationCorrections/PolarizationEfficienciesWildes.cpp
    src/PolarizationCorrections/PolarizerEfficiency.cpp
    src/PolarizationEfficiencyCor.cpp
    src/PolynomialCorrection.cpp
    src/Power.cpp
    src/PowerLawCorrection.cpp
    src/Q1D2.cpp
    src/Q1DWeighted.cpp
    src/Qhelper.cpp
    src/Qxy.cpp
    src/RadiusSum.cpp
    src/RayTracerTester.cpp
    src/ReadGroupsFromFile.cpp
    src/RealFFT.cpp
    src/Rebin.cpp
    src/Rebin2D.cpp
    src/RebinByPulseTimes.cpp
    src/RebinByTimeAtSample.cpp
    src/RebinByTimeBase.cpp
    src/RebinRagged2.cpp
    src/RebinToWorkspace.cpp
    src/Rebunch.cpp
    src/Regroup.cpp
    src/RemoveBackground.cpp
    src/RemoveBins.cpp
    src/RemoveInstrumentGeometry.cpp
    src/RemoveLowResTOF.cpp
    src/RemoveMaskedSpectra.cpp
    src/RemovePromptPulse.cpp
    src/RemoveSpectra.cpp
    src/RemoveWorkspaceHistory.cpp
    src/RenameWorkspace.cpp
    src/RenameWorkspaces.cpp
    src/ReplaceSpecialValues.cpp
    src/ResampleX.cpp
    src/ResetNegatives.cpp
    src/ResizeRectangularDetector.cpp
    src/RingProfile.cpp
    src/RunCombinationHelpers/RunCombinationHelper.cpp
    src/RunCombinationHelpers/SampleLogsBehaviour.cpp
    src/SANSCollimationLengthEstimator.cpp
    src/SampleCorrections/CircularBeamProfile.cpp
    src/SampleCorrections/DetectorGridDefinition.cpp
    src/SampleCorrections/MCAbsorptionStrategy.cpp
    src/SampleCorrections/MCInteractionStatistics.cpp
    src/SampleCorrections/MCInteractionVolume.cpp
    src/SampleCorrections/MayersSampleCorrection.cpp
    src/SampleCorrections/MayersSampleCorrectionStrategy.cpp
    src/SampleCorrections/RectangularBeamProfile.cpp
    src/SampleCorrections/SparseWorkspace.cpp
    src/SassenaFFT.cpp
    src/Scale.cpp
    src/ScaleX.cpp
    src/Segfault.cpp
    src/SetInstrumentParameter.cpp
    src/SetUncertainties.cpp
    src/ShiftLogTime.cpp
    src/SignalOverError.cpp
    src/SmoothData.cpp
    src/SmoothNeighbours.cpp
    src/SofQCommon.cpp
    src/SofQW.cpp
    src/SofQWCentre.cpp
    src/SofQWNormalisedPolygon.cpp
    src/SofQWPolygon.cpp
    src/SolidAngle.cpp
    src/SortEvents.cpp
    src/SortXAxis.cpp
    src/SpatialGrouping.cpp
    src/SpectrumAlgorithm.cpp
    src/SphericalAbsorption.cpp
    src/Stitch.cpp
    src/Stitch1D.cpp
    src/Stitch1DMany.cpp
    src/StripPeaks.cpp
    src/StripVanadiumPeaks.cpp
    src/StripVanadiumPeaks2.cpp
    src/SumEventsByLogValue.cpp
    src/SumNeighbours.cpp
    src/SumOverlappingTubes.cpp
    src/SumRowColumn.cpp
    src/SumSpectra.cpp
    src/TOFSANSResolution.cpp
    src/TOFSANSResolutionByPixel.cpp
    src/TOFSANSResolutionByPixelCalculator.cpp
    src/TimeAtSampleStrategyDirect.cpp
    src/TimeAtSampleStrategyElastic.cpp
    src/TimeAtSampleStrategyIndirect.cpp
    src/Transpose.cpp
    src/UnGroupWorkspace.cpp
    src/UnaryOperation.cpp
    src/UnwrapMonitor.cpp
    src/UnwrapMonitorsInTOF.cpp
    src/UnwrapSNS.cpp
    src/UpdateScriptRepository.cpp
    src/VesuvioL1ThetaResolution.cpp
    src/WeightedMean.cpp
    src/WeightedMeanOfWorkspace.cpp
    src/WeightingStrategy.cpp
    src/WienerSmooth.cpp
    src/WorkflowAlgorithmRunner.cpp
    src/WorkspaceBoundingBox.cpp
    src/WorkspaceJoiners.cpp
    src/XDataConverter.cpp
    src/XrayAbsorptionCorrection.cpp
)

set(INC_FILES
    inc/MantidAlgorithms/AbsorptionCorrection.h
    inc/MantidAlgorithms/AddAbsorptionWeightedPathLengths.h
    inc/MantidAlgorithms/AddLogDerivative.h
    inc/MantidAlgorithms/AddPeak.h
    inc/MantidAlgorithms/AddSampleLog.h
    inc/MantidAlgorithms/AddTimeSeriesLog.h
    inc/MantidAlgorithms/AnnularRingAbsorption.h
    inc/MantidAlgorithms/AnyShapeAbsorption.h
    inc/MantidAlgorithms/ApodizationFunctions.h
    inc/MantidAlgorithms/AppendSpectra.h
    inc/MantidAlgorithms/ApplyCalibration.h
    inc/MantidAlgorithms/ApplyDetailedBalance.h
    inc/MantidAlgorithms/ApplyFloodWorkspace.h
    inc/MantidAlgorithms/ApplyInstrumentToPeaks.h
    inc/MantidAlgorithms/ApplyTransmissionCorrection.h
    inc/MantidAlgorithms/AverageLogData.h
    inc/MantidAlgorithms/BeamProfileFactory.h
    inc/MantidAlgorithms/Bin2DPowderDiffraction.h
    inc/MantidAlgorithms/BinaryOperateMasks.h
    inc/MantidAlgorithms/BinaryOperation.h
    inc/MantidAlgorithms/CalculateCarpenterSampleCorrection.h
    inc/MantidAlgorithms/CalculateCountRate.h
    inc/MantidAlgorithms/CalculateDIFC.h
    inc/MantidAlgorithms/CalculateDynamicRange.h
    inc/MantidAlgorithms/CalculateEfficiency.h
    inc/MantidAlgorithms/CalculateEfficiency2.h
    inc/MantidAlgorithms/CalculateFlatBackground.h
    inc/MantidAlgorithms/CalculateIqt.h
    inc/MantidAlgorithms/CalculatePlaczek.h
    inc/MantidAlgorithms/CalculatePlaczekSelfScattering.h
    inc/MantidAlgorithms/CalculatePlaczekSelfScattering2.h
    inc/MantidAlgorithms/CalculatePolynomialBackground.h
    inc/MantidAlgorithms/CalculateTransmission.h
    inc/MantidAlgorithms/CalculateTransmissionBeamSpreader.h
    inc/MantidAlgorithms/CalculateZscore.h
    inc/MantidAlgorithms/CarpenterSampleCorrection.h
    inc/MantidAlgorithms/ChangeBinOffset.h
    inc/MantidAlgorithms/ChangeLogTime.h
    inc/MantidAlgorithms/ChangePulsetime.h
    inc/MantidAlgorithms/ChangePulsetime2.h
    inc/MantidAlgorithms/ChangeTimeZero.h
    inc/MantidAlgorithms/ChopData.h
    inc/MantidAlgorithms/ClearCache.h
    inc/MantidAlgorithms/ClearInstrumentParameters.h
    inc/MantidAlgorithms/ClearMaskFlag.h
    inc/MantidAlgorithms/CloneWorkspace.h
    inc/MantidAlgorithms/CombineDiffCal.h
    inc/MantidAlgorithms/Comment.h
    inc/MantidAlgorithms/CommutativeBinaryOperation.h
    inc/MantidAlgorithms/CompareWorkspaces.h
    inc/MantidAlgorithms/ConjoinWorkspaces.h
    inc/MantidAlgorithms/ConjoinXRuns.h
    inc/MantidAlgorithms/ConvertAxesToRealSpace.h
    inc/MantidAlgorithms/ConvertAxisByFormula.h
    inc/MantidAlgorithms/ConvertDiffCal.h
    inc/MantidAlgorithms/ConvertFromDistribution.h
    inc/MantidAlgorithms/ConvertSpectrumAxis.h
    inc/MantidAlgorithms/ConvertSpectrumAxis2.h
    inc/MantidAlgorithms/ConvertTableToMatrixWorkspace.h
    inc/MantidAlgorithms/ConvertToConstantL2.h
    inc/MantidAlgorithms/ConvertToDistribution.h
    inc/MantidAlgorithms/ConvertToEventWorkspace.h
    inc/MantidAlgorithms/ConvertToHistogram.h
    inc/MantidAlgorithms/ConvertToMatrixWorkspace.h
    inc/MantidAlgorithms/ConvertToPointData.h
    inc/MantidAlgorithms/ConvertUnits.h
    inc/MantidAlgorithms/ConvertUnitsUsingDetectorTable.h
    inc/MantidAlgorithms/CopyDataRange.h
    inc/MantidAlgorithms/CopyDetectorMapping.h
    inc/MantidAlgorithms/CopyInstrumentParameters.h
    inc/MantidAlgorithms/CopyLogs.h
    inc/MantidAlgorithms/CopySample.h
    inc/MantidAlgorithms/CorelliCalibrationApply.h
    inc/MantidAlgorithms/CorelliCalibrationDatabase.h
    inc/MantidAlgorithms/CorelliCrossCorrelate.h
    inc/MantidAlgorithms/CorrectKiKf.h
    inc/MantidAlgorithms/CorrectTOFAxis.h
    inc/MantidAlgorithms/CorrectToFile.h
    inc/MantidAlgorithms/CreateCalFileByNames.h
    inc/MantidAlgorithms/CreateDetectorTable.h
    inc/MantidAlgorithms/CreateDummyCalFile.h
    inc/MantidAlgorithms/CreateEPP.h
    inc/MantidAlgorithms/CreateFlatEventWorkspace.h
    inc/MantidAlgorithms/CreateFloodWorkspace.h
    inc/MantidAlgorithms/CreateGroupingWorkspace.h
    inc/MantidAlgorithms/CreateLogPropertyTable.h
    inc/MantidAlgorithms/CreateLogTimeCorrection.h
    inc/MantidAlgorithms/CreateMonteCarloWorkspace.h
    inc/MantidAlgorithms/CreatePSDBleedMask.h
    inc/MantidAlgorithms/CreatePeaksWorkspace.h
    inc/MantidAlgorithms/CreateSampleWorkspace.h
    inc/MantidAlgorithms/CreateSingleValuedWorkspace.h
    inc/MantidAlgorithms/CreateUserDefinedBackground.h
    inc/MantidAlgorithms/CreateWorkspace.h
    inc/MantidAlgorithms/CropToComponent.h
    inc/MantidAlgorithms/CropWorkspace.h
    inc/MantidAlgorithms/CropWorkspaceRagged.h
    inc/MantidAlgorithms/CrossCorrelate.h
    inc/MantidAlgorithms/CuboidGaugeVolumeAbsorption.h
    inc/MantidAlgorithms/CylinderAbsorption.h
    inc/MantidAlgorithms/DeadTimeCorrection.h
    inc/MantidAlgorithms/DeleteLog.h
    inc/MantidAlgorithms/DeleteWorkspace.h
    inc/MantidAlgorithms/DeleteWorkspaces.h
    inc/MantidAlgorithms/DetectorDiagnostic.h
    inc/MantidAlgorithms/DetectorEfficiencyCor.h
    inc/MantidAlgorithms/DetectorEfficiencyCorUser.h
    inc/MantidAlgorithms/DetectorEfficiencyVariation.h
    inc/MantidAlgorithms/DiffractionEventCalibrateDetectors.h
    inc/MantidAlgorithms/DiffractionFocussing.h
    inc/MantidAlgorithms/DiffractionFocussing2.h
    inc/MantidAlgorithms/DirectILLTubeBackground.h
    inc/MantidAlgorithms/DiscusMultipleScatteringCorrection.h
    inc/MantidAlgorithms/Divide.h
    inc/MantidAlgorithms/EQSANSCorrectFrame.h
    inc/MantidAlgorithms/EQSANSResolution.h
    inc/MantidAlgorithms/EQSANSTofStructure.h
    inc/MantidAlgorithms/EditInstrumentGeometry.h
    inc/MantidAlgorithms/ElasticWindow.h
    inc/MantidAlgorithms/EstimateDivergence.h
    inc/MantidAlgorithms/EstimateResolutionDiffraction.h
    inc/MantidAlgorithms/EventWorkspaceAccess.h
    inc/MantidAlgorithms/Exponential.h
    inc/MantidAlgorithms/ExponentialCorrection.h
    inc/MantidAlgorithms/ExportTimeSeriesLog.h
    inc/MantidAlgorithms/ExtractFFTSpectrum.h
    inc/MantidAlgorithms/ExtractMask.h
    inc/MantidAlgorithms/ExtractMaskToTable.h
    inc/MantidAlgorithms/ExtractSingleSpectrum.h
    inc/MantidAlgorithms/ExtractSpectra.h
    inc/MantidAlgorithms/ExtractSpectra2.h
    inc/MantidAlgorithms/ExtractUnmaskedSpectra.h
    inc/MantidAlgorithms/FFT.h
    inc/MantidAlgorithms/FFTDerivative.h
    inc/MantidAlgorithms/FFTSmooth.h
    inc/MantidAlgorithms/FFTSmooth2.h
    inc/MantidAlgorithms/FilterBadPulses.h
    inc/MantidAlgorithms/FilterByLogValue.h
    inc/MantidAlgorithms/FilterByTime.h
    inc/MantidAlgorithms/FilterByXValue.h
    inc/MantidAlgorithms/FilterEvents.h
    inc/MantidAlgorithms/FindCenterOfMassPosition.h
    inc/MantidAlgorithms/FindCenterOfMassPosition2.h
    inc/MantidAlgorithms/FindDeadDetectors.h
    inc/MantidAlgorithms/FindDetectorsOutsideLimits.h
    inc/MantidAlgorithms/FindEPP.h
    inc/MantidAlgorithms/FindPeakBackground.h
    inc/MantidAlgorithms/FindPeaks.h
    inc/MantidAlgorithms/FindPeaksConvolve.h
    inc/MantidAlgorithms/FitPeak.h
    inc/MantidAlgorithms/FitPeaks.h
    inc/MantidAlgorithms/FixGSASInstrumentFile.h
    inc/MantidAlgorithms/FlatPlateAbsorption.h
    inc/MantidAlgorithms/GSLFunctions.h
    inc/MantidAlgorithms/GeneralisedSecondDifference.h
    inc/MantidAlgorithms/GenerateEventsFilter.h
    inc/MantidAlgorithms/GenerateGoniometerIndependentBackground.h
    inc/MantidAlgorithms/GenerateIPythonNotebook.h
    inc/MantidAlgorithms/GeneratePeaks.h
    inc/MantidAlgorithms/GeneratePythonFitScript.h
    inc/MantidAlgorithms/GeneratePythonScript.h
    inc/MantidAlgorithms/GetAllEi.h
    inc/MantidAlgorithms/GetDetectorOffsets.h
    inc/MantidAlgorithms/GetEi.h
    inc/MantidAlgorithms/GetEi2.h
    inc/MantidAlgorithms/GetEiMonDet3.h
    inc/MantidAlgorithms/GetQsInQENSData.h
    inc/MantidAlgorithms/GetTimeSeriesLogInformation.h
    inc/MantidAlgorithms/GravitySANSHelper.h
    inc/MantidAlgorithms/GroupToXResolution.h
    inc/MantidAlgorithms/GroupWorkspaces.h
    inc/MantidAlgorithms/HRPDSlabCanAbsorption.h
    inc/MantidAlgorithms/He3TubeEfficiency.h
    inc/MantidAlgorithms/HyspecScharpfCorrection.h
    inc/MantidAlgorithms/IQTransform.h
    inc/MantidAlgorithms/IdentifyNoisyDetectors.h
    inc/MantidAlgorithms/IntegrateByComponent.h
    inc/MantidAlgorithms/IntegrateEPP.h
    inc/MantidAlgorithms/Integration.h
    inc/MantidAlgorithms/InterpolatingRebin.h
    inc/MantidAlgorithms/InterpolationOption.h
    inc/MantidAlgorithms/InvertMask.h
    inc/MantidAlgorithms/LineProfile.h
    inc/MantidAlgorithms/Logarithm.h
    inc/MantidAlgorithms/LorentzCorrection.h
    inc/MantidAlgorithms/MagFormFactorCorrection.h
    inc/MantidAlgorithms/MaskBins.h
    inc/MantidAlgorithms/MaskBinsFromTable.h
    inc/MantidAlgorithms/MaskBinsFromWorkspace.h
    inc/MantidAlgorithms/MaskBinsIf.h
    inc/MantidAlgorithms/MaskDetectorsIf.h
    inc/MantidAlgorithms/MaskInstrument.h
    inc/MantidAlgorithms/MaskNonOverlappingBins.h
    inc/MantidAlgorithms/MatrixWorkspaceAccess.h
    inc/MantidAlgorithms/Max.h
    inc/MantidAlgorithms/MaxEnt.h
    inc/MantidAlgorithms/MaxEnt/MaxentCalculator.h
    inc/MantidAlgorithms/MaxEnt/MaxentEntropy.h
    inc/MantidAlgorithms/MaxEnt/MaxentEntropyNegativeValues.h
    inc/MantidAlgorithms/MaxEnt/MaxentEntropyPositiveValues.h
    inc/MantidAlgorithms/MaxEnt/MaxentSpace.h
    inc/MantidAlgorithms/MaxEnt/MaxentSpaceComplex.h
    inc/MantidAlgorithms/MaxEnt/MaxentSpaceReal.h
    inc/MantidAlgorithms/MaxEnt/MaxentTransform.h
    inc/MantidAlgorithms/MaxEnt/MaxentTransformFourier.h
    inc/MantidAlgorithms/MaxEnt/MaxentTransformMultiFourier.h
    inc/MantidAlgorithms/MaxMin.h
    inc/MantidAlgorithms/MedianDetectorTest.h
    inc/MantidAlgorithms/MergeLogs.h
    inc/MantidAlgorithms/MergeRuns.h
    inc/MantidAlgorithms/Min.h
    inc/MantidAlgorithms/Minus.h
    inc/MantidAlgorithms/ModeratorTzero.h
    inc/MantidAlgorithms/ModeratorTzeroLinear.h
    inc/MantidAlgorithms/MonitorEfficiencyCorUser.h
    inc/MantidAlgorithms/MonteCarloAbsorption.h
    inc/MantidAlgorithms/MostLikelyMean.h
    inc/MantidAlgorithms/MultipleScatteringCorrection.h
    inc/MantidAlgorithms/MultipleScatteringCorrectionDistGraber.h
    inc/MantidAlgorithms/Multiply.h
    inc/MantidAlgorithms/MultiplyRange.h
    inc/MantidAlgorithms/NormaliseByCurrent.h
    inc/MantidAlgorithms/NormaliseByDetector.h
    inc/MantidAlgorithms/NormaliseToMonitor.h
    inc/MantidAlgorithms/NormaliseToUnity.h
    inc/MantidAlgorithms/OneMinusExponentialCor.h
    inc/MantidAlgorithms/PDCalibration.h
    inc/MantidAlgorithms/PDDetermineCharacterizations.h
    inc/MantidAlgorithms/PDFFourierTransform.h
    inc/MantidAlgorithms/PDFFourierTransform2.h
    inc/MantidAlgorithms/PaalmanPingsAbsorptionCorrection.h
    inc/MantidAlgorithms/PaddingAndApodization.h
    inc/MantidAlgorithms/ParallaxCorrection.h
    inc/MantidAlgorithms/Pause.h
    inc/MantidAlgorithms/PeakParameterHelper.h
    inc/MantidAlgorithms/PerformIndexOperations.h
    inc/MantidAlgorithms/Plus.h
    inc/MantidAlgorithms/PointByPointVCorrection.h
    inc/MantidAlgorithms/PoissonErrors.h
    inc/MantidAlgorithms/PolarizationCorrectionFredrikze.h
    inc/MantidAlgorithms/PolarizationCorrectionWildes.h
    inc/MantidAlgorithms/PolarizationCorrections/DepolarizedAnalyserTransmission.h
    inc/MantidAlgorithms/PolarizationCorrections/FlipperEfficiency.h
    inc/MantidAlgorithms/PolarizationCorrections/HeliumAnalyserEfficiency.h
    inc/MantidAlgorithms/PolarizationCorrections/PolarizationCorrectionsHelpers.h
    inc/MantidAlgorithms/PolarizationCorrections/PolarizationEfficienciesWildes.h
    inc/MantidAlgorithms/PolarizationCorrections/PolarizerEfficiency.h
    inc/MantidAlgorithms/PolarizationEfficiencyCor.h
    inc/MantidAlgorithms/PolynomialCorrection.h
    inc/MantidAlgorithms/Power.h
    inc/MantidAlgorithms/PowerLawCorrection.h
    inc/MantidAlgorithms/Q1D2.h
    inc/MantidAlgorithms/Q1DWeighted.h
    inc/MantidAlgorithms/Qhelper.h
    inc/MantidAlgorithms/Qxy.h
    inc/MantidAlgorithms/RadiusSum.h
    inc/MantidAlgorithms/RayTracerTester.h
    inc/MantidAlgorithms/ReadGroupsFromFile.h
    inc/MantidAlgorithms/RealFFT.h
    inc/MantidAlgorithms/Rebin.h
    inc/MantidAlgorithms/Rebin2D.h
    inc/MantidAlgorithms/RebinByPulseTimes.h
    inc/MantidAlgorithms/RebinByTimeAtSample.h
    inc/MantidAlgorithms/RebinByTimeBase.h
    inc/MantidAlgorithms/RebinRagged2.h
    inc/MantidAlgorithms/RebinToWorkspace.h
    inc/MantidAlgorithms/Rebunch.h
    inc/MantidAlgorithms/Regroup.h
    inc/MantidAlgorithms/RemoveBackground.h
    inc/MantidAlgorithms/RemoveBins.h
    inc/MantidAlgorithms/RemoveInstrumentGeometry.h
    inc/MantidAlgorithms/RemoveLowResTOF.h
    inc/MantidAlgorithms/RemoveMaskedSpectra.h
    inc/MantidAlgorithms/RemovePromptPulse.h
    inc/MantidAlgorithms/RemoveSpectra.h
    inc/MantidAlgorithms/RemoveWorkspaceHistory.h
    inc/MantidAlgorithms/RenameWorkspace.h
    inc/MantidAlgorithms/RenameWorkspaces.h
    inc/MantidAlgorithms/ReplaceSpecialValues.h
    inc/MantidAlgorithms/ResampleX.h
    inc/MantidAlgorithms/ResetNegatives.h
    inc/MantidAlgorithms/ResizeRectangularDetector.h
    inc/MantidAlgorithms/RingProfile.h
    inc/MantidAlgorithms/RunCombinationHelpers/RunCombinationHelper.h
    inc/MantidAlgorithms/RunCombinationHelpers/SampleLogsBehaviour.h
    inc/MantidAlgorithms/SANSCollimationLengthEstimator.h
    inc/MantidAlgorithms/SampleCorrections/CircularBeamProfile.h
    inc/MantidAlgorithms/SampleCorrections/DetectorGridDefinition.h
    inc/MantidAlgorithms/SampleCorrections/IBeamProfile.h
    inc/MantidAlgorithms/SampleCorrections/IMCAbsorptionStrategy.h
    inc/MantidAlgorithms/SampleCorrections/IMCInteractionVolume.h
    inc/MantidAlgorithms/SampleCorrections/MCAbsorptionStrategy.h
    inc/MantidAlgorithms/SampleCorrections/MCInteractionStatistics.h
    inc/MantidAlgorithms/SampleCorrections/MCInteractionVolume.h
    inc/MantidAlgorithms/SampleCorrections/MayersSampleCorrection.h
    inc/MantidAlgorithms/SampleCorrections/MayersSampleCorrectionStrategy.h
    inc/MantidAlgorithms/SampleCorrections/RectangularBeamProfile.h
    inc/MantidAlgorithms/SampleCorrections/SparseWorkspace.h
    inc/MantidAlgorithms/SassenaFFT.h
    inc/MantidAlgorithms/Scale.h
    inc/MantidAlgorithms/ScaleX.h
    inc/MantidAlgorithms/Segfault.h
    inc/MantidAlgorithms/SetInstrumentParameter.h
    inc/MantidAlgorithms/SetUncertainties.h
    inc/MantidAlgorithms/ShiftLogTime.h
    inc/MantidAlgorithms/SignalOverError.h
    inc/MantidAlgorithms/SmoothData.h
    inc/MantidAlgorithms/SmoothNeighbours.h
    inc/MantidAlgorithms/SofQCommon.h
    inc/MantidAlgorithms/SofQW.h
    inc/MantidAlgorithms/SofQWCentre.h
    inc/MantidAlgorithms/SofQWNormalisedPolygon.h
    inc/MantidAlgorithms/SofQWPolygon.h
    inc/MantidAlgorithms/SolidAngle.h
    inc/MantidAlgorithms/SortEvents.h
    inc/MantidAlgorithms/SortXAxis.h
    inc/MantidAlgorithms/SpatialGrouping.h
    inc/MantidAlgorithms/SpectrumAlgorithm.h
    inc/MantidAlgorithms/SphericalAbsorption.h
    inc/MantidAlgorithms/Stitch.h
    inc/MantidAlgorithms/Stitch1D.h
    inc/MantidAlgorithms/Stitch1DMany.h
    inc/MantidAlgorithms/StripPeaks.h
    inc/MantidAlgorithms/StripVanadiumPeaks.h
    inc/MantidAlgorithms/StripVanadiumPeaks2.h
    inc/MantidAlgorithms/SumEventsByLogValue.h
    inc/MantidAlgorithms/SumNeighbours.h
    inc/MantidAlgorithms/SumOverlappingTubes.h
    inc/MantidAlgorithms/SumRowColumn.h
    inc/MantidAlgorithms/SumSpectra.h
    inc/MantidAlgorithms/TOFSANSResolution.h
    inc/MantidAlgorithms/TOFSANSResolutionByPixel.h
    inc/MantidAlgorithms/TOFSANSResolutionByPixelCalculator.h
    inc/MantidAlgorithms/TimeAtSampleStrategy.h
    inc/MantidAlgorithms/TimeAtSampleStrategyDirect.h
    inc/MantidAlgorithms/TimeAtSampleStrategyElastic.h
    inc/MantidAlgorithms/TimeAtSampleStrategyIndirect.h
    inc/MantidAlgorithms/Transpose.h
    inc/MantidAlgorithms/UnGroupWorkspace.h
    inc/MantidAlgorithms/UnaryOperation.h
    inc/MantidAlgorithms/UnwrapMonitor.h
    inc/MantidAlgorithms/UnwrapMonitorsInTOF.h
    inc/MantidAlgorithms/UnwrapSNS.h
    inc/MantidAlgorithms/UpdateScriptRepository.h
    inc/MantidAlgorithms/VesuvioL1ThetaResolution.h
    inc/MantidAlgorithms/WeightedMean.h
    inc/MantidAlgorithms/WeightedMeanOfWorkspace.h
    inc/MantidAlgorithms/WeightingStrategy.h
    inc/MantidAlgorithms/WienerSmooth.h
    inc/MantidAlgorithms/WorkflowAlgorithmRunner.h
    inc/MantidAlgorithms/WorkspaceBoundingBox.h
    inc/MantidAlgorithms/WorkspaceJoiners.h
    inc/MantidAlgorithms/XDataConverter.h
    inc/MantidAlgorithms/XrayAbsorptionCorrection.h
)

set(TEST_FILES
    AddAbsorptionWeightedPathLengthsTest.h
    AddLogDerivativeTest.h
    AddPeakTest.h
    AddSampleLogTest.h
    AddTimeSeriesLogTest.h
    AnnularRingAbsorptionTest.h
    AnyShapeAbsorptionTest.h
    AppendSpectraTest.h
    ApplyCalibrationTest.h
    ApplyDetailedBalanceTest.h
    ApplyFloodWorkspaceTest.h
    ApplyInstrumentToPeaksTest.h
    ApplyTransmissionCorrectionTest.h
    AverageLogDataTest.h
    BeamProfileFactoryTest.h
    Bin2DPowderDiffractionTest.h
    BinaryOperateMasksTest.h
    BinaryOperationTest.h
    CalculateCarpenterSampleCorrectionTest.h
    CalculateCountRateTest.h
    CalculateDIFCTest.h
    CalculateDynamicRangeTest.h
    CalculateEfficiency2Test.h
    CalculateEfficiencyTest.h
    CalculateFlatBackgroundTest.h
    CalculateIqtTest.h
    CalculatePlaczekSelfScattering2Test.h
    CalculatePlaczekSelfScatteringTest.h
    CalculatePlaczekTest.h
    CalculatePolynomialBackgroundTest.h
    CalculateTransmissionBeamSpreaderTest.h
    CalculateTransmissionTest.h
    CalculateZscoreTest.h
    CarpenterSampleCorrectionTest.h
    ChainedOperatorTest.h
    ChangeBinOffsetTest.h
    ChangeLogTimeTest.h
    ChangePulsetime2Test.h
    ChangePulsetimeTest.h
    ChangeTimeZeroTest.h
    ChopDataTest.h
    CircularBeamProfileTest.h
    ClearCacheTest.h
    ClearInstrumentParametersTest.h
    ClearMaskFlagTest.h
    CloneWorkspaceTest.h
    CombineDiffCalTest.h
    CommentTest.h
    CommutativeBinaryOperationTest.h
    CompareWorkspacesTest.h
    ConjoinWorkspacesTest.h
    ConjoinXRunsTest.h
    ConvertAxesToRealSpaceTest.h
    ConvertAxisByFormulaTest.h
    ConvertDiffCalTest.h
    ConvertFromDistributionTest.h
    ConvertSpectrumAxis2Test.h
    ConvertSpectrumAxisTest.h
    ConvertTableToMatrixWorkspaceTest.h
    ConvertToConstantL2Test.h
    ConvertToDistributionTest.h
    ConvertToEventWorkspaceTest.h
    ConvertToHistogramTest.h
    ConvertToMatrixWorkspaceTest.h
    ConvertToPointDataTest.h
    ConvertUnitsTest.h
    ConvertUnitsUsingDetectorTableTest.h
    CopyDataRangeTest.h
    CopyDetectorMappingTest.h
    CopyInstrumentParametersTest.h
    CopyLogsTest.h
    CopySampleTest.h
    CorelliCalibrationApplyTest.h
    CorelliCalibrationDatabaseTest.h
    CorelliCrossCorrelateTest.h
    CorrectKiKfTest.h
    CorrectTOFAxisTest.h
    CorrectToFileTest.h
    CreateCalFileByNamesTest.h
    CreateDetectorTableTest.h
    CreateDummyCalFileTest.h
    CreateEPPTest.h
    CreateFlatEventWorkspaceTest.h
    CreateGroupingWorkspaceTest.h
    CreateLogPropertyTableTest.h
    CreateLogTimeCorrectionTest.h
    CreateMonteCarloWorkspaceTest.h
    CreatePSDBleedMaskTest.h
    CreatePeaksWorkspaceTest.h
    CreateSampleWorkspaceTest.h
    CreateSingleValuedWorkspaceTest.h
    CreateUserDefinedBackgroundTest.h
    CreateWorkspaceTest.h
    CropToComponentTest.h
    CropWorkspaceRaggedTest.h
    CropWorkspaceTest.h
    CrossCorrelateTest.h
    CrossCorrelateTestData.h
    CuboidGaugeVolumeAbsorptionTest.h
    CylinderAbsorptionTest.h
    DeadTimeCorrectionTest.h
    DeleteLogTest.h
    DeleteWorkspaceTest.h
    DeleteWorkspacesTest.h
    DetectorEfficiencyCorTest.h
    DetectorEfficiencyCorUserTest.h
    DetectorEfficiencyVariationTest.h
    DetectorGridDefinitionTest.h
    DiffractionEventCalibrateDetectorsTest.h
    DiffractionFocussing2Test.h
    DiffractionFocussingTest.h
    DirectILLTubeBackgroundTest.h
    DiscusMultipleScatteringCorrectionTest.h
    DivideTest.h
    EQSANSCorrectFrameTest.h
    EditInstrumentGeometryTest.h
    ElasticWindowTest.h
    EstimateDivergenceTest.h
    EstimateResolutionDiffractionTest.h
    ExponentialCorrectionTest.h
    ExponentialTest.h
    ExportTimeSeriesLogTest.h
    ExtractFFTSpectrumTest.h
    ExtractMaskTest.h
    ExtractMaskToTableTest.h
    ExtractSingleSpectrumTest.h
    ExtractSpectra2Test.h
    ExtractSpectraTest.h
    ExtractUnmaskedSpectraTest.h
    FFTDerivativeTest.h
    FFTSmooth2Test.h
    FFTTest.h
    FilterBadPulsesTest.h
    FilterByLogValueTest.h
    FilterByTimeTest.h
    FilterByXValueTest.h
    FilterEventsTest.h
    FindCenterOfMassPosition2Test.h
    FindCenterOfMassPositionTest.h
    FindDeadDetectorsTest.h
    FindDetectorsOutsideLimitsTest.h
    FindEPPTest.h
    FindPeakBackgroundTest.h
    FindPeaksConvolveTest.h
    FindPeaksTest.h
    FitPeakTest.h
    FitPeaksTest.h
    FixGSASInstrumentFileTest.h
    FlatPlateAbsorptionTest.h
    GeneralisedSecondDifferenceTest.h
    GenerateEventsFilterTest.h
    GenerateGoniometerIndependentBackgroundTest.h
    GenerateIPythonNotebookTest.h
    GeneratePeaksTest.h
    GeneratePythonFitScriptTest.h
    GeneratePythonScriptTest.h
    GetAllEiTest.h
    GetDetectorOffsetsTest.h
    GetEiMonDet3Test.h
    GetEiTest.h
    GetEiV1Test.h
    GetQsInQENSDataTest.h
    GetTimeSeriesLogInformationTest.h
    GroupToXResolutionTest.h
    GroupWorkspacesTest.h
    HRPDSlabCanAbsorptionTest.h
    He3TubeEfficiencyTest.h
    HyspecScharpfCorrectionTest.h
    IQTransformTest.h
    IdentifyNoisyDetectorsTest.h
    IndirectFitDataCreationHelperTest.h
    IntegrateByComponentTest.h
    IntegrateEPPTest.h
    IntegrationTest.h
    InterpolatingRebinTest.h
    InterpolationOptionTest.h
    InvertMaskTest.h
    LineProfileTest.h
    LogarithmTest.h
    LorentzCorrectionTest.h
    MCAbsorptionStrategyTest.h
    MCInteractionVolumeTest.h
    MagFormFactorCorrectionTest.h
    MaskBinsFromTableTest.h
    MaskBinsFromWorkspaceTest.h
    MaskBinsIfTest.h
    MaskBinsTest.h
    MaskDetectorsIfTest.h
    MaskInstrumentTest.h
    MaskNonOverlappingBinsTest.h
    MaxEnt/MaxentCalculatorTest.h
    MaxEnt/MaxentEntropyNegativeValuesTest.h
    MaxEnt/MaxentEntropyPositiveValuesTest.h
    MaxEnt/MaxentSpaceComplexTest.h
    MaxEnt/MaxentSpaceRealTest.h
    MaxEnt/MaxentTransformFourierTest.h
    MaxEnt/MaxentTransformMultiFourierTest.h
    MaxEntTest.h
    MaxMinTest.h
    MayersSampleCorrectionStrategyTest.h
    MayersSampleCorrectionTest.h
    MedianDetectorTestTest.h
    MergeLogsTest.h
    MergeRunsTest.h
    MinusTest.h
    ModeratorTzeroLinearTest.h
    ModeratorTzeroTest.h
    MonitorEfficiencyCorUserTest.h
    MonteCarloAbsorptionTest.h
    MostLikelyMeanTest.h
    MultipleScatteringCorrectionTest.h
    MultiplyRangeTest.h
    MultiplyTest.h
    MuonWorkspaceCreationHelperTest.h
    NormaliseByCurrentTest.h
    NormaliseByDetectorTest.h
    NormaliseToMonitorTest.h
    OneMinusExponentialCorTest.h
    PDCalibrationTest.h
    PDDetermineCharacterizationsTest.h
    PDFFourierTransform2Test.h
    PDFFourierTransformTest.h
    PaalmanPingsAbsorptionCorrectionTest.h
    PaddingAndApodizationTest.h
    ParallaxCorrectionTest.h
    PauseTest.h
    PerformIndexOperationsTest.h
    PlusTest.h
    PointByPointVCorrectionTest.h
    PoissonErrorsTest.h
    PolarizationCorrectionFredrikzeTest.h
    PolarizationCorrectionWildesTest.h
    PolarizationCorrections/DepolarizedAnalyserTransmissionTest.h
    PolarizationCorrections/FlipperEfficiencyTest.h
    PolarizationCorrections/HeliumAnalyserEfficiencyTest.h
    PolarizationCorrections/PolarizationCorrectionsHelpersTest.h
    PolarizationCorrections/PolarizationEfficienciesWildesTest.h
    PolarizationCorrections/PolarizerEfficiencyTest.h
    PolarizationEfficiencyCorTest.h
    PolynomialCorrectionTest.h
    PowerLawCorrectionTest.h
    PowerTest.h
    Q1D2Test.h
    Q1DWeightedTest.h
    QxyTest.h
    RadiusSumTest.h
    RayTracerTesterTest.h
    ReadGroupsFromFileTest.h
    RealFFTTest.h
    Rebin2DTest.h
    RebinByPulseTimesTest.h
    RebinByTimeAtSampleTest.h
    RebinRagged2Test.h
    RebinTest.h
    RebinToWorkspaceTest.h
    RebunchTest.h
    RectangularBeamProfileTest.h
    RegroupTest.h
    RemoveBackgroundTest.h
    RemoveBinsTest.h
    RemoveInstrumentGeometryTest.h
    RemoveLowResTOFTest.h
    RemoveMaskedSpectraTest.h
    RemovePromptPulseTest.h
    RemoveSpectraTest.h
    RemoveWorkspaceHistoryTest.h
    RenameWorkspaceTest.h
    RenameWorkspacesTest.h
    ReplaceSpecialValuesTest.h
    ResampleXTest.h
    ResetNegativesTest.h
    ResizeRectangularDetectorTest.h
    RingProfileTest.h
    RunCombinationHelperTest.h
    SANSCollimationLengthEstimatorTest.h
    SampleLogsBehaviourTest.h
    SassenaFFTTest.h
    ScaleTest.h
    ScaleXTest.h
    SetInstrumentParameterTest.h
    SetUncertaintiesTest.h
    ShiftLogTimeTest.h
    SignalOverErrorTest.h
    SmoothDataTest.h
    SmoothNeighboursTest.h
    SofQCommonTest.h
    SofQWCentreTest.h
    SofQWCutTest.h
    SofQWNormalisedPolygonTest.h
    SofQWPolygonTest.h
    SofQWTest.h
    SolidAngleTest.h
    SortEventsTest.h
    SortXAxisTest.h
    SparseWorkspaceTest.h
    SpatialGroupingTest.h
    SphericalAbsorptionTest.h
    Stitch1DManyTest.h
    Stitch1DTest.h
    StitchTest.h
    StripPeaksTest.h
    StripVanadiumPeaks2Test.h
    StripVanadiumPeaksTest.h
    SumEventsByLogValueTest.h
    SumNeighboursTest.h
    SumOverlappingTubesTest.h
    SumRowColumnTest.h
    SumSpectraTest.h
    TOFSANSResolutionByPixelCalculatorTest.h
    TOFSANSResolutionByPixelTest.h
    TimeAtSampleStrategyDirectTest.h
    TimeAtSampleStrategyElasticTest.h
    TimeAtSampleStrategyIndirectTest.h
    TransposeTest.h
    UnGroupWorkspaceTest.h
    UnaryOperationTest.h
    UnwrapMonitorTest.h
    UnwrapMonitorsInTOFTest.h
    UnwrapSNSTest.h
    VesuvioL1ThetaResolutionTest.h
    WeightedMeanOfWorkspaceTest.h
    WeightedMeanTest.h
    WeightingStrategyTest.h
    WienerSmoothTest.h
    WorkflowAlgorithmRunnerTest.h
    WorkspaceCreationHelperTest.h
    WorkspaceGroupTest.h
    XrayAbsorptionCorrectionTest.h
)

set(TEST_PY_FILES test/NormaliseToUnityTest.py)

pyunittest_add_test(${CMAKE_CURRENT_SOURCE_DIR} python ${TEST_PY_FILES})

if(COVERAGE)
  foreach(loop_var ${SRC_FILES} ${C_SRC_FILES} ${INC_FILES})
    set_property(GLOBAL APPEND PROPERTY COVERAGE_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/${loop_var}")
  endforeach(loop_var)
endif()

# Add a precompiled header where they are supported
enable_precompiled_headers(inc/MantidAlgorithms/PrecompiledHeader.h SRC_FILES)
# Disable optimization for certain Segfault as the key lines that cause the segfault can be optimized away but this
# algorithm is only ever intended to test the crashing behaviour of the framework
if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_source_files_properties(src/Segfault.cpp PROPERTIES COMPILE_FLAGS -O0)
endif()

# Add the target for this directory
add_library(Algorithms ${SRC_FILES} ${C_SRC_FILES} ${INC_FILES})
add_library(Mantid::Algorithms ALIAS Algorithms)

target_include_directories(
  Algorithms PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc> $<INSTALL_INTERFACE:include/Mantid>
)
# Set the name of the generated library
set_target_properties(Algorithms PROPERTIES OUTPUT_NAME MantidAlgorithms COMPILE_DEFINITIONS "IN_MANTID_ALGORITHMS")

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_target_properties(Algorithms PROPERTIES INSTALL_RPATH "@loader_path/../Contents/MacOS")
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  set_target_properties(Algorithms PROPERTIES INSTALL_RPATH "\$ORIGIN/../${LIB_DIR}")
endif()

# Add to the 'Framework' group in VS
set_property(TARGET Algorithms PROPERTY FOLDER "MantidFramework")

target_link_libraries(
  Algorithms
  PUBLIC Mantid::API Mantid::HistogramData Mantid::Kernel Mantid::Geometry Mantid::Indexing
  PRIVATE Mantid::DataObjects Mantid::Parallel Mantid::Types
)

# Add the unit tests directory
add_subdirectory(test)

# Auto-generate exports header
target_include_directories(
  Algorithms PUBLIC $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/Framework/Algorithms> $<INSTALL_INTERFACE:include/Mantid>
)
generate_mantid_export_header(Algorithms FALSE)

# Installation settings
mtd_install_framework_lib(TARGETS Algorithms PLUGIN_LIB)
